# Nifty-risk

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: technical_note.md
outputs/: breach_table_portfolio_direct10d_covid.csv  breach_table_portfolio_direct10d_full.csv  breach_table_portfolio_scaled10d_covid.csv  breach_table_portfolio_scaled10d_full.csv  breaches_portfolio_direct10d.csv  breaches_portfolio_scaled10d.csv  im_proxy_table_10d_alpha99.csv  positions_minvar_lw_cap5.csv  stress_period_replay.csv  stress_scenarios.csv  stress_worst_10d.csv  stress_worst_days.csv  traffic_light_250d_alpha99.csv
src/: backtesting.py  config.py  covariance.py  data.py  diagnostics.py  es_models.py  fhs.py  garch_model.py  horizon_var.py  margin.py  mc_backtest.py  monte_carlo.py  portfolio.py  positions.py  returns.py  stress.py  traffic_light.py  var_models.py  volatility.py
tests/: test_backtest.py  test_garch.py  test_garch_robustness.py  test_margin.py  test_mc.py  test_mc_backtest.py  test_mc_df_sensitivity.py  test_run.py  test_stress.py  test_stress_covid_10d.py  test_traffic_light.py  test_var.py  test_var_es.py  test_var_plus.py
